non_executable_reasons_record/194.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¤‰æ•°ã®è¨­å®š
name=GUITest6
#classpath=".:/root/git_jupyter_notebook/Java/postgresql-42.1.1.jar"
#classpath=".:/Users/ftakao2007/jupyter/jupyter_notebook/Java/postgresql-42.1.1.jar"

### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- EOS > ${name}.java

import java.awt.*;
import java.awt.event.*;

class PrefFrame extends Frame implements ActionListener {
    Label lb1;
    TextArea txtar1;
    Button btn1, btn2, btn3;
    
    public PrefFrame(String title) {
        setTitle(title);

        addWindowListener(new WindowAdapter() {
            public void windowClosing(WindowEvent e) {
                System.exit(0);
            }
        });

        //# ãƒ©ãƒ™ãƒ«
        lb1 = new Label("ãƒœã‚¿ãƒ³ã‚’ã‚¯ãƒªãƒƒã‚¯ã—ã¦ãã ã•ã„ã€‚",Label.CENTER);
        //# ãƒ•ã‚©ãƒ³ãƒˆãŒSerifã€æ›¸ä½“ãŒBOLDã€ãƒã‚¤ãƒ³ãƒˆãŒ14ã«ãªã‚‹
        Font f = new Font("Serif", Font.BOLD, 14);
        lb1.setFont(f);
        //# æ–‡å­—ã®è‰²ãŒé’è‰²ã«ãªã‚‹
        lb1.setForeground(Color.blue);
        add(lb1, BorderLayout.NORTH);
        
        //# ãƒ†ã‚­ã‚¹ãƒˆã‚¨ãƒªã‚¢
        txtar1 = new TextArea();
        //# ãƒ•ã‚©ãƒ³ãƒˆãŒDialogã€æ›¸ä½“ãŒPLAIN(æ¨™æº–)ã€ãƒã‚¤ãƒ³ãƒˆãŒ16ã«ãªã‚‹
        txtar1.setFont(new Font("Dialog", Font.PLAIN, 16));
        //# æ–‡å­—ã®è‰²ãŒãƒ€ãƒ¼ã‚¯ã‚°ãƒ¬ã‚¤ã«ãªã‚‹
        txtar1.setForeground(new Color(64,64,64));
        add(txtar1, BorderLayout.CENTER);
        
        //# ãƒ‘ãƒãƒ«
        Panel pn1 = new Panel();
        pn1.setLayout(new GridLayout(1, 3));
        
        //# ãƒœã‚¿ãƒ³1
        btn1 = new Button("è¡¨ç¤º");
        btn1.addActionListener(this);
        pn1.add(btn1);
        
        //# ãƒœã‚¿ãƒ³2
        btn2 = new Button("ã‚¯ãƒªã‚¢");
        btn2.addActionListener(this);
        pn1.add(btn2);

        //# ãƒœã‚¿ãƒ³3
        btn3 = new Button("çµ‚äº†");
        btn3.addActionListener(this);
        //# èƒŒæ™¯è‰²ãŒãƒ€ãƒ¼ã‚¯ã‚°ãƒ¬ã‚¤ã«ãªã‚‹
        btn3.setBackground(new Color(255,0,255));
        //# å‰æ™¯è‰²(æ–‡å­—è‰²)ãŒãƒã‚¼ãƒ³ãƒ€ã«ãªã‚‹
        btn3.setForeground(new Color(255,255,255));
        pn1.add(btn3);
        
        //# ãƒ‘ãƒãƒ«
        add(pn1, BorderLayout.SOUTH);
    }
  
    public void actionPerformed (ActionEvent e) {
        if (e.getSource() == btn1) {
            prefDisplay();
        } else if (e.getSource() == btn2) {
            txtar1.setText("");
        } else {
            System.exit(0);
        }
    }
    
    //# ã‚¯ãƒ©ã‚¹å†…ã‹ã‚‰ã—ã‹ä½¿ã‚ãªã„ã®ã§ã‚¢ã‚¯ã‚»ã‚¹ä¿®é£¾å­ã¯private
    private void prefDisplay () {
        StringBuffer temp = new StringBuffer();
        temp.append("1" + "\t");
        temp.append("Hokkaido" + "\n");
        temp.append("2" + "\t");
        temp.append("Aomori" + "\n");
        temp.append("3" + "\t");
        temp.append("Iwate" + "\n");
        temp.append("4" + "\t");
        temp.append("Miyagi" + "\n");
        temp.append("5" + "\t");
        temp.append("Akita" + "\n");
        txtar1.setText(temp.toString());
    }
            
}

public class $name {
    public static void main(String args[]){
        PrefFrame frm = new PrefFrame("éƒ½é“åºœçœŒãƒã‚¹ã‚¿ãƒ¼");
        //# ãƒ•ãƒ¬ãƒ¼ãƒ ã®è¨­å®š
        frm.setLocation(300,200);
        frm.setSize(250,350);
        frm.setBackground(Color.LIGHT_GRAY);
        frm.setVisible(true);
    }
}
EOS

### ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«
#javac ${name}.java
javac -encoding UTF-8 ${name}.java

### å®Ÿè¡Œ
#java -classpath ${classpath} ${name}
java ${name}
------------------

[0;36m  File [0;32m"<ipython-input-1-bafd0611f31b>"[0;36m, line [0;32m10[0m
[0;31m    cat <<- EOS > ${name}.java[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-bafd0611f31b>, line 10)

Executability                            : False
